--- a/phosh/phosh-mobile-settings/PKGBUILD
+++ b/phosh/phosh-mobile-settings/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh-mobile-settings
 pkgdesc="A settings app for mobile specific things"
-pkgver=0.25.0.r0.g8f95c3f
+pkgver=0.26.0.r0.g4553b4e
 pkgrel=1
 _arches=all
 arch=(
@@ -22,7 +22,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=8f95c3f4258ba2b4753049b8c9ecabe7b402cf4d
+_commit=4553b4eef679e54c7cf270ad59b42e136e2353a5
 source=(
     "git+https://gitlab.gnome.org/guidog/phosh-mobile-settings.git#commit=$_commit"
 )
