--- a/boot/qhypstub-git/PKGBUILD
+++ b/boot/qhypstub-git/PKGBUILD
@@ -24,7 +24,7 @@ sha256sums=(
 
 pkgver() {
     cd "$srcdir"/qhypstub
-    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
 }
 
 build() {
