--- a/device/reboot-mode/PKGBUILD
+++ b/device/reboot-mode/PKGBUILD
@@ -17,7 +17,7 @@ sha256sums=(SKIP)
 
 pkgver() {
     cd "$pkgname"
-    git describe --long "$_commit" --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7 "$_commit" --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
