--- a/device/qrtr-git/PKGBUILD
+++ b/device/qrtr-git/PKGBUILD
@@ -18,7 +18,7 @@ sha256sums=(SKIP)
 pkgver() {
     cd "$_pkgname"
 
-    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
 }
 
 build() {
