--- a/device/rmtfs-git/PKGBUILD
+++ b/device/rmtfs-git/PKGBUILD
@@ -26,7 +26,7 @@ sha256sums=(
 pkgver() {
     cd "$_pkgname"
 
-    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
 }
 
 build() {
