--- a/main/firefox-mobile-config/PKGBUILD
+++ b/main/firefox-mobile-config/PKGBUILD
@@ -19,7 +19,7 @@ sha256sums=(
 
 pkgver() {
     cd mobile-config-firefox
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags --abbrev=7 "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
