--- a/phosh/callaudiod/PKGBUILD
+++ b/phosh/callaudiod/PKGBUILD
@@ -22,7 +22,7 @@ sha256sums=(SKIP)
 
 pkgver() {
     cd "$srcdir/$pkgname"
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags --abbrev=7 "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
