--- a/phosh/gnome-calls/PKGBUILD
+++ b/phosh/gnome-calls/PKGBUILD
@@ -38,7 +38,7 @@ sha256sums=(SKIP)
 
 pkgver() {
     cd calls
-    git describe --long --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7 --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
