phosh/phosh-osk-stub: provide and conflict with phosh-osk pseudopackage

--- a/phosh/phosh-osk-stub/PKGBUILD
+++ b/phosh/phosh-osk-stub/PKGBUILD
@@ -10,6 +10,8 @@ arch=(
 )
 license=(GPL3+)
 url=https://gitlab.gnome.org/guidog/phosh-osk-stub
+provides=(phosh-osk)
+conflicts=(phosh-osk)
 depends=(
     feedbackd
     phoc
