--- a/main/pixman/PKGBUILD
+++ b/main/pixman/PKGBUILD
@@ -5,9 +5,9 @@
 # ALARM: Kevin Mihelich <kevin@archlinuxarm.org>
 #  - disable x86 extensions (mmx, sse2, ssse3)
 #
-# Kupfer: add pixman aarch64 vector patch
+# Kupfer: enable aarch64 vector instructions
 _mode=host
-pkgname=pixman
+pkgname=pixman-kupfer
 pkgdesc="The pixel-manipulation library for X and cairo"
 pkgver=0.42.2
 pkgrel=1
@@ -16,15 +16,20 @@ arch=(
     aarch64
 )
 license=(custom)
-url=https://cgit.freedesktop.org/pixman/
-provides=(libpixman-1.so)
+url=https://gitlab.freedesktop.org/pixman/pixman/
+provides=(
+    libpixman-1.so
+    pixman
+)
+conflicts=(pixman)
+replaces=(pixman)
 depends=(glibc)
 makedepends=(
     meson
     libpng
 )
 source=(
-    https://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.xz
+    https://xorg.freedesktop.org/releases/individual/lib/pixman-${pkgver}.tar.xz
 )
 sha256sums=(
     5747d2ec498ad0f1594878cc897ef5eb6c29e91c53b899f7f71b506785fc1376
@@ -57,5 +62,5 @@ check() {
 package() {
   cd "$srcdir/pixman-$pkgver"
   DESTDIR="$pkgdir" meson install -C build
-  install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 COPYING
+  install -Dt "$pkgdir/usr/share/licenses/pixman" -m644 COPYING
 }
