--- a/linux/msm8916/PKGBUILD
+++ b/linux/msm8916/PKGBUILD
@@ -21,19 +21,21 @@ makedepends=(
 options=(!strip)
 _commit=9b226ce779c7247720939f5ae71d2ad3f57de9fd
 source=(
-    "linux::git+$url#commit=$_commit"
+    "linux-${_commit}.tar.gz::${url}/archive/${_commit}.tar.gz"
     extra_config
     linux.preset
     60-linux.hook
     90-linux.hook
 )
 sha256sums=(
-    SKIP
+    bdba3e595d24c624eca0ca09d70115b6436e6a2bd09f2857da20cb102990cf78
     770324694413ee2491d2987586cba072cfc0e62d0a520d267bbd66acafedaa61
     66644820faa950a5fc59181f5aefcbed6d7ed652b29aee69979a2be2a032025d
     ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21
     c20dce380025de175fe9a551b247b3fb05ecf068eef63e773f82b36be9568270
 )
+
+_srcname="linux-${_commit}"
 
 pkgver() {
     cd ${_srcname}
