--- a/plasma_mobile/cmake-extras/PKGBUILD
+++ b/plasma_mobile/cmake-extras/PKGBUILD
@@ -25,7 +25,7 @@ sha256sums=(
 
 pkgver() {
     cd "$pkgname"
-    git describe --long "$_commit" --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7  --tags "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
