--- a/plasma_mobile/kweather/PKGBUILD
+++ b/plasma_mobile/kweather/PKGBUILD
@@ -7,7 +7,7 @@ _mode=host
 pkgname=kweather
 pkgdesc="Simple Weather application for Mobile Devices running Plasma"
 pkgver=23.01.0.r0.gecb63d7
-pkgrel=1
+pkgrel=2
 _arches=all
 arch=(
     x86_64
@@ -45,7 +45,7 @@ sha256sums=(
 
 pkgver() {
     cd "$pkgname"
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7 --tags "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
