--- a/plasma_mobile/plasma-mobile-nm/PKGBUILD
+++ b/plasma_mobile/plasma-mobile-nm/PKGBUILD
@@ -6,7 +6,7 @@ _mode=host
 pkgname=plasma-mobile-nm
 _pkgname=plasma-nm
 pkgdesc="Plasma applet written in QML for managing network connections - Mobile Edition"
-pkgver=5.26.5.r0.ge507aa40
+pkgver=5.26.5.r0.ge507aa4
 pkgrel=1
 _arches=all
 arch=(
@@ -43,7 +43,7 @@ sha256sums=(
 
 pkgver() {
     cd "${_pkgname}"
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7 --tags "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
