--- a/plasma_mobile/plasma-mobile/PKGBUILD
+++ b/plasma_mobile/plasma-mobile/PKGBUILD
@@ -2,7 +2,7 @@
 _mode=host
 pkgname=plasma-mobile
 pkgdesc="Plasma Mobile shell components."
-pkgver=5.26.5.r0.g4da0b1a3b
+pkgver=5.26.5.r0.g4da0b1a
 pkgrel=1
 _arches=all
 arch=(
@@ -45,7 +45,7 @@ sha256sums=(
 
 pkgver() {
     cd "$pkgname"
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --abbrev=7 --tags "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
