phosh/*: update to 0.27
- phosh 0.27
- callaudiod 0.1.9
- feedbackd 0.2.0
- gnome-calls 44.1
- phoc 0.27.0
- phosh-mobile-settings 0.27.0
- phosh 0.27.0
- phosh-osk-stub 0.27.0
- sofia-sip 1.13.15

--- a/phosh/callaudiod/PKGBUILD
+++ b/phosh/callaudiod/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=callaudiod
 pkgdesc="Call audio routing daemon"
-pkgver=0.1.7.r0.g92cf20a
+pkgver=0.1.9.r0.g50d1ac3
 pkgrel=1
 _arches=all
 arch=(
@@ -16,7 +16,7 @@ depends=(
     libpulse
 )
 makedepends=(meson)
-_commit=92cf20a93903fe3d7969f4002643b011011243f7
+_commit=50d1ac3792aac03abe0a3a88ceac77201a43bb3b
 source=("git+$url#commit=$_commit")
 sha256sums=(SKIP)
 
