--- a/phosh/phosh/PKGBUILD
+++ b/phosh/phosh/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh
 pkgdesc="The phosh Shell"
-pkgver=0.26.0.r0.g30a36e8
+pkgver=0.27.0.r0.g8ed96ed
 pkgrel=1
 _arches=all
 arch=(
@@ -37,7 +37,7 @@ makedepends=(
     ninja
     evince
 )
-_commit=30a36e88ab762d4729c7fb0d7a9fc8cbd447656d
+_commit=8ed96ed0a6de978b778b2d845c6e67b3eeaa13
 source=(
     "git+$url#commit=$_commit"
     pam_phosh
