flavour-plasma-mobile-minimal: kupfer-config files were renamed from .txt to .lst

--- a/plasma_mobile/flavour-plasma-mobile-minimal/PKGBUILD
+++ b/plasma_mobile/flavour-plasma-mobile-minimal/PKGBUILD
@@ -3,7 +3,7 @@ _mode=cross
 pkgname=flavour-plasma-mobile-minimal
 pkgdesc="Kupfer flavour: The Qt-based Plasma Mobile desktop environment (minimal edition)"
 pkgver=5.26
-pkgrel=4
+pkgrel=5
 _arches=all
 arch=(
     x86_64
@@ -23,9 +23,9 @@ depends=(
     powerdevil
 )
 
-source=(plasma-mobile.txt)
+source=(plasma-mobile.lst)
 sha256sums=(97b49e8c1da4ce13194b04fa2a5367d9a50c5ffe33e40dc176d3fc9a569f5525)
 
 package() {
-    install -Dm644 "$srcdir"/plasma-mobile.txt "$pkgdir"/etc/kupfer/systemd/plasma-mobile.txt
+    install -Dm644 "$srcdir"/plasma-mobile.lst "$pkgdir"/etc/kupfer/systemd/plasma-mobile.lst
 }
