--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ default:
       if [[ "$branch" != "$(git branch --show-current)" ]] && git remote update && dest_commit="$(git ls-remote origin 'refs/heads/*' | grep "refs/heads/${branch}\$" | cut -f1)" ; then
         if [[ -n "$dest_commit" ]] && [[ "$current_commit" != "$dest_commit" ]] ; then
           echo "switching local commit '${current_commit}' to remote commit '${dest_commit}'" &&
-          git checkout -f -b "$branch" "$dest_commit" && git log --max-count=1 && pip install -r requirements.txt ;
+          git checkout -f -b "$branch" "$dest_commit" && git log --max-count=1 && pip install -r requirements.txt --break-system-packages ;
         else
           echo "KBS branch up to date with remote commit '$dest_commit'" ;
         fi
