--- a/phosh/phosh-mobile-settings/PKGBUILD
+++ b/phosh/phosh-mobile-settings/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh-mobile-settings
 pkgdesc="A settings app for mobile specific things"
-pkgver=0.28.0.r0.g87a6c1c
+pkgver=0.29.0.r0.gafead55
 pkgrel=1
 _arches=all
 arch=(
@@ -22,7 +22,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=87a6c1c17be5e85273c595d1865d8626647544a5
+_commit=afead556eae31cb239ed2f24a7ad1a2507a641be
 source=(
     "git+https://gitlab.gnome.org/guidog/phosh-mobile-settings.git#commit=$_commit"
 )
