main/usb-tethering: replace dhcpd
replace dhcp package with new unudhcpd package

fixes https://gitlab.com/kupfer/packages/pkgbuilds/-/issues/19

--- a/main/usb-tethering/usb-tethering.service
+++ b/main/usb-tethering/usb-tethering.service
@@ -1,7 +1,7 @@
 # systemd service file for usb-tethering
 
 [Unit]
-Wants=dhcpd4.service
+Wants=unudhcpd.service
 Description=USB Tethering
 
 [Service]
