--- a/main/usb-tethering/PKGBUILD
+++ b/main/usb-tethering/PKGBUILD
@@ -3,32 +3,26 @@ _nodeps=true
 pkgname=usb-tethering
 pkgdesc="USB tethering on ConfigFS systems"
 pkgver=0.1
-pkgrel=5
+pkgrel=6
 _arches=specific
 arch=(any)
 license=(MIT)
 url=https://gitlab.com/postmarketOS/pmaports/-/blob/master/main/postmarketos-mkinitfs/init_functions.sh
 depends=(
     systemd
-    dhcp
+    unudhcpd
 )
 options=()
 source=(
     usb-tethering.sh
     usb-file-transfer.sh
     usb-tethering.service
-    dhcpd.conf
-    dhcpd4.service-customexec.conf
-    tmpfiles.d.usb-tethering.conf
     usb-tethering.lst
 )
 sha256sums=(
     c9e92ffd45d8510a39e9c360bb3dde6b00a7cf92a3f8b218fc3d838b45074597
     fdb481c22a5838dbbbf0a00f3e335106f5dd475c7b7d0b443f7d77d76d914ac2
-    f950a442790a0d3ea8cde5efa581bc1405d2254cb21a1d1ffab32e1c50228543
-    2c8685ca8445d21633cfbb7ee60017b0393865f1a585f218bb7c37632f1408c9
-    735fc085275b27032ea00d5a090c541bf42a8ff679a5b48cccc55d30db84a8f2
-    c803130e3bfe57088d313183881b462fc84ec591b0c35fc3cd12d8e9e3f366ae
+    11ca32c8b453a97ed92200b1bb9bde662bae4525804219ae97b8a125af1dc16d
     9681fac31cb272127531c439cdd0b07283e0cdbb9f2e135624813e9dbc7c5ee6
 )
 
@@ -40,15 +34,6 @@ package() {
 
     install -d "${pkgdir}/usr/lib/systemd/system/"
     install -m 644 usb-tethering.service "${pkgdir}/usr/lib/systemd/system/"
-
-    install -d "${pkgdir}/usr/lib/tmpfiles.d/"
-    install -m 644 tmpfiles.d.usb-tethering.conf "${pkgdir}/usr/lib/tmpfiles.d/usb-tethering.conf"
-
-    install -d "${pkgdir}/etc/systemd/system/dhcpd4.service.d/"
-    install -m 644 dhcpd4.service-customexec.conf "${pkgdir}/etc/systemd/system/dhcpd4.service.d/customexec.conf"
-
-    install -d "${pkgdir}/etc/usb-tethering/"
-    install -m 644 dhcpd.conf "${pkgdir}/etc/usb-tethering/"
 
     install -Dm644 "$srcdir"/usb-tethering.lst "$pkgdir"/etc/kupfer/systemd/usb-tethering.lst
 }
