--- a/plasma_mobile/qqc2-breeze-style/PKGBUILD
+++ b/plasma_mobile/qqc2-breeze-style/PKGBUILD
@@ -3,7 +3,7 @@
 _mode=host
 pkgname=qqc2-breeze-style
 pkgdesc="Breeze inspired QQC2 Style"
-pkgver=5.27.5.r0.g752f863
+pkgver=5.27.9.r0.g752f863
 pkgrel=1
 _arches=all
 arch=(
@@ -16,7 +16,7 @@ depends=(
     qt5-base
     qt5-declarative
     qt5-quickcontrols2
-    kiconthemes
+    kiconthemes5
     kirigami2
 )
 makedepends=(
