device-msm8953-xiaomi-mido: add deviceinfo_partitions
Co-authored-by: jld3103 <jld3103yt@gmail.com>

Signed-off-by: devops117 <55235206+devops117@users.noreply.github.com>

--- a/device/device-msm8953-xiaomi-mido/PKGBUILD
+++ b/device/device-msm8953-xiaomi-mido/PKGBUILD
@@ -20,8 +20,15 @@ source=(
 sha256sums=
 
 package() {
+    cp "$srcdir"/deviceinfo "$srcdir"/deviceinfo_
+    cat >>"$srcdir"/deviceinfo_ <<EOF
+deviceinfo_partitions_data="/dev/mmcblk0p49"
+deviceinfo_partitions_microsd="/dev/mmcblk1"
+
+deviceinfo_lk2nd="true"
+EOF
+    install -Dm644 "$srcdir"/deviceinfo "$pkgdir"/etc/kupfer/deviceinfo
+
     install -Dm644 "$srcdir"/xiaomi-mido.conf "$pkgdir"/etc/kupfer/mkinitcpio.conf.d/xiaomi-mido.conf
     install -Dm644 "$srcdir"/machine-info "$pkgdir"/etc/machine-info
-
-    install -Dm644 "$srcdir"/deviceinfo "$pkgdir"/etc/kupfer/deviceinfo
 }
